update docker file update host for es