@@ -17,7 +17,7 @@ RUN chown -R $APPLICATION_USER /app
 
 USER $APPLICATION_USER
 
-COPY --from=builder /builder/build/libs/creating-http-api-ktor-1.0-SNAPSHOT-all.jar /app/my-application.jar
+COPY --from=builder /builder/build/libs/creating-http-api-ktor-1.0-SNAPSHOT-all.jar /app/luxuryshopapi.jar
 WORKDIR /app
 
-CMD ["java", "-server", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-XX:InitialRAMFraction=2", "-XX:MinRAMFraction=2", "-XX:MaxRAMFraction=2", "-XX:+UseG1GC", "-XX:MaxGCPauseMillis=100", "-XX:+UseStringDeduplication", "-jar", "my-application.jar"]
+CMD ["java","-jar", "luxuryshopapi.jar"]
